# darling-ncurses

./: CMakeLists.txt  README.md
darling/include/: curses.h  eti.h  form.h  menu.h  nc_tparm.h  ncurses.h  ncurses_dll.h  panel.h  term.h  term_entry.h  termcap.h  tic.h  unctrl.h
darling/script/: gen_derived_sources.sh  gen_terminfo.sh
ncurses/form/: CMakeLists.txt
ncurses/menu/: CMakeLists.txt
ncurses/ncurses/: CMakeLists.txt
ncurses/panel/: CMakeLists.txt
